--- a/issue1/article05/2016-02-20.mdx
+++ b/issue1/article05/2016-02-20.mdx
@@ -3,7 +3,7 @@ title: '​#5 Genesis Of Kharkov Music Culture In The Highlight Of The City’s 
 slug: genesis-of-kharkov-music-culture
 description: 'The article highlights the genesis of Kharkov musical culture from the late 18th  to the first half of the 19th century, studying it in terms of two aspects, the formation of  education  and the emergence of the city’s concert life.'
 authors: [okononova]
-tags: [Kharkov, music education, tradition, oratorio, performing arts]
+tags: [Kharkov, Ukraine, music education, tradition, oratorio, performing arts]
 ---
 
 # ​#5 Genesis Of Kharkov Music Culture In The Highlight Of The City’s Education And Concert Life Formation
@@ -53,7 +53,7 @@ export function Name({ author, affil, email }) {
 	<h4>Abstract</h4>
 	<div>
 
-    	The article highlights the genesis of Kharkov musical culture from the late 18th  to the first half of the 19th century, studying it in terms of two aspects, the formation of  education  and the emergence of the city’s concert life. The relevance of the research subject chosen by the author is determined by the wish to give the fullest description of the multi-layered process of formation of Kharkov musical culture  which played one of the leading roles in the history of Ukrainian culture, and to acquaint the Western public with the most interesting facts of the formation and development of a reputable East-European centre. The main range of issues discussed in the article covers the period of the innitial  foundation of artistic education, and its influence on the expansion and perception of music in different social circles, presenting the structures and forms of the nascent musical life of Kharkov. The section "Specific features of the Ukrainian system of education" brings out the facts which indicate the progressive tendencies in education, especially, on the territory of Sloboda Ukraine. The formation of artistic education in the religious schools of the city is covered in the section "Genesis of musical education in Kharkov". One of the most productive periods of the  city’s  cultivation of concert life  associated with the functioning of the University is analyzed in the section "The impact of the University music activities  on the city's  concert going." The Conclusion emphasizes the interaction of traditional  and nontraditional  in the musical culture of Kharkov that was clearly manifested in the concert activities of the University, in particular, in popularization of oratorios. Furthermore, it discusses the factors which participated in  the development in the field of compositional achievement as well as  the performing arts and opened new perspectives in the dynamics of the artistic life of the Ukrainian city.
+    	The article highlights the genesis of Kharkov musical culture from the late 18th  to the first half of the 19th century, studying it in terms of two aspects, the formation of  education  and the emergence of the city’s concert life. The relevance of the research subject chosen by the author is determined by the wish to give the fullest description of the multi-layered process of formation of Kharkov musical culture  which played one of the leading roles in the history of Ukrainian culture, and to acquaint the Western public with the most interesting facts of the formation and development of a reputable East-European centre. The main range of issues discussed in the article covers the period of the innitial foundation of artistic education, and its influence on the expansion and perception of music in different social circles, presenting the structures and forms of the nascent musical life of Kharkov. The section "Specific features of the Ukrainian system of education" brings out the facts which indicate the progressive tendencies in education, especially, on the territory of Sloboda Ukraine. The formation of artistic education in the religious schools of the city is covered in the section "Genesis of musical education in Kharkov". One of the most productive periods of the  city’s  cultivation of concert life  associated with the functioning of the University is analyzed in the section "The impact of the University music activities  on the city's  concert going." The Conclusion emphasizes the interaction of traditional  and nontraditional  in the musical culture of Kharkov that was clearly manifested in the concert activities of the University, in particular, in popularization of oratorios. Furthermore, it discusses the factors which participated in  the development in the field of compositional achievement as well as  the performing arts and opened new perspectives in the dynamics of the artistic life of the Ukrainian city.
     	<div>
     		<strong>Keywords:</strong>
     		<i>
@@ -220,7 +220,7 @@ In Kharkov region the overall tone of the culture was set by "Little Russian peo
 
 International influences that emerged at the Collegium at that time were a powerful stimulus for the formation of professional music education. Close attention to the Western culture was characteristic feature of the time. In particular, as D. Bagaley argued:
 
-> (...) to train good teachers (who worked then at the Collegium, (remark О.К.)) young people were sent abroad. (Bagaley, 1893, 34)
+> (...) to train good teachers (who worked then at the Collegium, (author's remark)) young people were sent abroad. (Bagaley, 1893, 34)
 
 Foreigners taught new European languages in the State-based College, the assistant regent position was held by a German Jacob Tsikh and the first official music pedagogue was to become an Italian Franz Martini. The contract, signed by F. Martini in 1771, for some reason, had not been implemented, and the position reserved for him was taken by Kontsevich.In contrast to the capital, in Kharkov the influx of foreigners, of course, was less tangible. However, in noble families the fashion of Western teachers became common all over the place.
 
@@ -404,6 +404,10 @@ The study of Kharkov musical culture in the first decades of the 19th century, f
 22. Veretennikov, V.I. 1911. "The Art School in Kharkov in the 18th century." _Collection of papers of Kharkiv Historical and Philological Society in memory of Professor Redin Ye.K., V. 19., 13_. Kharkov: Reprint.
 23. Yaroslavlsky, V.I. 1887. "From the Memoirs of Yaroslavlsky, V.I. about the City of Kharkov and Kharkov Guberniya (1788-1820)." _Kharkov Collection of Papers: Literary and Scientific Application to the "Kharkov Calendar" for 1887. Issue 1, 29-52. Kharkov: n.p_.
 
+</div>
+
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
 </div>
 
 </div>
