--- a/issue1/article06/2016-02-19.mdx
+++ b/issue1/article06/2016-02-19.mdx
@@ -684,4 +684,8 @@ We can say that case study can tell us certain important things that other appro
 
 </div>
 
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
+</div>
+
 </div>
