--- a/issue1/article07/2016-02-18.mdx
+++ b/issue1/article07/2016-02-18.mdx
@@ -1,4 +1,183 @@
 ---
-title: 
-
+title: '#7 ​Technique And Style Of George Balanchine School'
+slug: technique-and-style-of-george-balanchine-school
+description: 'By his comparative methodological approach the author confirms that Balanchine founded his school on the basis of the Russian school of classical dance of pre-Vaganova period, modifying it by taking into account the characteristics of the American national character, as well as the psychological and physical structure of the performers.'
+authors: [psilkin]
+tags: [Balanchine, dancer, choreographer, classical  dance, interpretation]
 ---
+
+# #7 ​Technique And Style Of George Balanchine School
+
+{/* truncate */}
+
+```
+UDC: 793.32.07 Баланшин Џ.
+     792.82
+COBISS.SR-ID 221746700
+
+Received: 07.Oct.2015
+Revised: 05.Jan.2016
+Accepted: 20.Jan.2016
+
+```
+
+# #7 ​Technique And Style Of George Balanchine School
+
+export function Name({ author, affil, email }) {
+	return (
+		<p className='author'>
+			<strong>{author}</strong>
+			<span>{affil}</span>
+			<span>{email}</span>
+		</p>
+	);
+}
+
+<div className='authors'>
+	<Name
+		author='Petr A. Silkin'
+		affil='Dep. of Choreography,  Vaganova Academy, St. Petersburg, Russia'
+		email='petr.silkin@gmail.com'
+	/>
+</div>
+
+<div className='abstract'>
+<div className='citation'>
+<strong>Citation:</strong> Silkin, Peter A. 2016. "Technique and Style of George Balanchine School." [_Accelerando: Belgrade Journal of Music and Dance 1:7_](http://localhost:3000/articles/issue8/art)
+
+</div>
+
+<div>
+	<h4>Abstract</h4>
+	<div>
+
+    	Creativity of any outstanding master in any art has always attracted and attracts keen interest. One of the most influential figures in the 20th century, who created the classical Ballet in America, was George Balanchine. His greatest merit was that he, by taking the steps of classical dance of St. Petersburg as a base, managed to give it a totally different context. By his comparative methodological approach the author confirms that Balanchine founded his school on the basis of the Russian school of classical dance of pre-Vaganova period, modifying it by taking into account the characteristics of the American national character, as well as the psychological and physical structure of the performers. Thus Balanchine developed neoclassicism, a form that combines the essence of the Russian ballet with modern and dynamic sensuality of American audience. The author's main goal is to show the technique and style of George Balanchine. He takes into consideration the basic dance steps showing how these steps are performing according to Balanchine's interpretation and differentiated from Soviet, Vaganova Ballet School. The author discusses fundamental skills on which classical technique is based: battement tendu, battement fondu, battement développé, enveloppé, general details of adagio, and pointe work. The paper has its implication in promoting pedagogical approach that insists in mastering basic movements in students in order to develop  skills and speed necessary for  superb  dancers.
+
+    	<div>
+    		<strong>Keywords:</strong>
+    		<i>
+    			{' '}
+    			Balanchine, dancer, choreographer, steps of classical  dance, interpretation
+    		</i>
+    	</div>
+    </div>
+
+</div>
+
+</div>
+
+<div className='text'>
+
+## Introduction
+
+George Balanchine (Georgi Melitonovich Balanchivadze [Георгий Баланчивадзе]) was a Russian-American choreographer and a ballet director. Balanchine was born in 1904, in St. Petersburg in the family of the Georgian composer Meliton Balanchivadze. Balanchine was enrolled in the St. Petersburg Imperial Ballet School while still very young, and was trained there from 1914 to 1921. Since 1920, while still a student, Balanchine began choreographing with independence and singularity. For his inventive choreography he was invited and joined the Mariinsky Ballet, at that time called The State Academy of Opera and Ballet (also known as Kirow. GATOB is the Russian abbreviation).
+
+In 1924, with his troupe of ballet dancers and singers, he went on a tour of Western Europe and never returned to the Soviet Union. While touring Germany, they denied to return to the Soviet Union. When they came in France, they attracted attention and were invited by impresario Serge Diaghilev to audition for his Ballets Russes. After audition in Paris, Balanchine together with his colleagues, was accepted into the company. Within a year Balanchine became the chief choreographer of Diaghilev's the Ballets Russes. After the death of Diaghilev in 1929, Balanchine had been working with the prominent European dance companies until he met his patron Linkoln Kirstein.
+
+Lincoln Kirstein came from a wealthy Boston family and from his early childhood showed interest in the arts, specially ballet. During his European tour in the age of seventeen, Kirstein saw performances of Diaghilev's troupe in London, Balanchine's Cat,and Apollo, which produced a great impression on him. These engenders more his interest of this kind of art and his persistent dream of founding a ballet company in the United States with its own repertoire distinct from the Europeans'. Furthermore, Kirstein launched his European tour in 1933 with a special goal, that was to find a choreographer to implement his ideas. The choice fell on Balanchine. Here's how Kirstein himself explained that election: ​
+
+> because I was in love with the dance and saw the Cat in the year 1927 and Apollon Mussaget (Apollo) next year. Nobody was able to make such choreographies before. For me, there was no doubts in choosing, even if Fokin, Massine, or Lifar were free ... in my view Ballet is exactly what Balanchine has been doing, because Balanchine's ballet is a collaboration of dance and music, and not the painting and pantomime. (Souritz 2004, 137)
+
+Kirstein invited Balanchine to USA, and after his appearing in America, Balanchine very soon came to the conclusion that for the creation of a ballet company he first had to establish a school in which he would be capable to prepare dancers for an embodiment of his creative ideas. Therefore, together with Kirstein, whose invitation to come to America he received in 1933, Balanchine founded the School of American Ballet (SAB) in 1934, and the New York City Ballet in 1948, He established the SAB on the basis of the Russian school of classical dance, modifying it by taking into account the characteristics of the American national character, as well as the psychological and physical structure of the performers.
+
+It is important to note that the Russian basis of Balanchine's methodology was Russian school of pre-Vaganova period. It is known that Agrippina Vaganova (1879-1951) formed a pedagogical system, a method which was named after her, while her ideas of ballet technique and pedagogy were recorded in 1934 in her book "Basic Principles of Classical Ballet," which influenced the teaching of Italian master Enrico Cecchetti, who was a teacher in the company of Serge Diaghilev during Balanchine's stay with the troupe (Silkin 2015). Balanchine directed the SAB until his death in 1983. He was widely regarded as the chief architect of classical ballet in the United States.
+
+## Theoretical Background And The Main Purpose Of The Paper
+
+The paper has its theoretical background in the recently visible interest in pedagogical approach of Balanchine in America in such authors as Suki Schorer (1999), Barbara Walczak and Una Kaiin (2008). Also, the Russian Press published several articles on Balanchine in the "Bulletin of Vaganova Academy of Russian Ballet" (Schorer 2000; Silkin 2014, 69). In the "Bulletin of the Baltic Federal University Immanuel Kant" Vol. 5 the author of this paper published his work "George Balanchine, the teacher (1904-1983)" (Silkin 2013, 106-115). The author have already been reviewed a number of pas in his article "Некоторые базовые движения классического экзерсиса в интерпретации Баланчина" ("Some basic movements of the classical exercise in the interpretation of Balanchine") (Silkin 2014), in which he investigated the technical component – the manner of movement, the style of execution evolved into its own technique, determining the necessary concepts “technique” and “style” in relation to the art of dance - technique which is the method and the method of execution of a movement which is a style, featuring the “pronunciation” of the vocabulary of dance. In this article the author will take into consideration only the basic ballet movements from the vast arsenal of heritage of Balanchine.
+
+Now, let us explain some of the basic movements of classical dance as they are executed and interpreted in Balanchine's shool: battement tendu, battement fondu, battement développé and enveloppé, adagio, and point technique.
+​
+### Battement tendu
+
+Balanchine would always ask the dancer when performing tendu not to polish the floor. What he wanted was a light touching of the floor. "Don't dig into the floor" was his usual comment. The direction of the leg at performing tendu forward and back must be to the exact body’s center line, and aside - precisely aside back. The specified directions of legs forward and back gives a certain stylistic coloring to poses of croisé and effacé, visually elongating the line of open legs.
+
+The following should be taken into consideration for execution of the movement:
+- the exact position of the legs running forward and back along the body’s central line, exactly in the way;
+- maximum turnout all the time;
+- light touch to the floor;
+- full tension of foot, with the fingers pressed against a sole of shoes;
+- not to work through semi-fingers;
+- stop in the Fifth (V) position fully each time you close, an exception is when the tempo is - too fast to do it;
+- straight back leg in a line with hips; hips sweeping forward; keep shoulders square; back - straight; the stomach is retracted. (Schorer 1999, 67)
+
+### ​Battement fondu
+
+Unlike the Vaganova method, in which the execution of the fondu should be seamless, namely two legs are bent and stretched at the same time, whether to a height of 90° or 45° (Silkin 2015) Balanchine demanded nontraditional execution of this movement in the following items :
+He wanted dancers to stretch and raise the moving leg more fully in cou-de-pied and open it in the right direction at 90°.
+
+Then from 90° to lower the moving leg at 45°, and then to bend both knees, i. e. to make fondu.
+Balanchine requested to extend at first during the execution of fondu a supporting leg and then the moving leg. But when he asked the execution of fondu in 45°, he requested the simultaneous bending and straightening of legs. In addition, when performing a pas, dancers had to show an elegant line of the leg in lifting motion, what was the stylistic coloring of a pas.
+
+### Battement développé
+
+While requested dancers to perform battement éveloppé Balanchine wanted to see the following aspects: the dancer must present a pas clearly visible, no matter at what height or direction; when lowering her legs the dancer must have the full control of them and must not drop her legs in the V position; also, when opening her legs a dancer should know where the legs will move. In the Balanchine's school a leg may start opening forward from the V position, go back and vice verse, but it has to pass about a supporting leg at the level of its pulling.
+Balanchine wanted dancers to know a difference between her stretched leg back at développé and in arabesque pose. When performing développé dancer should keep absolutely straight hips and spine whereas in executing arabesque the position of the hips and back allow insignificant departure from this rule.
+
+In performing développé on the side, Balanchine demanded that after passé a dancer should raise knee and open her leg. He said: "Raise your leg on the level of a decollete of your evening dress" (Walczak and Kai, 2008).
+
+### Enveloppé
+
+This movement is opposite to développé. The main thing here is to work on turnout and achieve maximum effect during return of an extended leg back to a supporting leg in the V position. The movement can be executed at 45° and 90°. A leg makes battement dégagé from the V position and, coming back to the V position goes through passé and the cou-de-pied. The execution at 45° is running at fast speed, and at 90° is going at slow tempo. Balanchine insisted that returning of the moving leg to the supporting leg must be carried out with raising the knee. The movement can be combined with grand battement.
+​
+### ​Adagio
+
+The main considerations are for the adagio. It is known that Balanchine enjoyed the fame as a creator of ballerinas who can move with great speed, clarity and elongated lines. Nevertheless, adagio was an essential part of his lessons. When the movement is done at slow speed, there is more time to work on improvement of a form and position of a body. At a barre he often gave a task to women to execute adagio on fingers and to men on semi-fingers. The master set simple adagio at a barre, being focused on one or two movements: développé; dégagé or enveloppé. For him it was important to work out the basic adagio forms. He did not set the long, confused, complicated combinations, including various steps, poses, and directions of a body. Instead he would give the dancers to perform one movement forward, sideways, backwards in various tempos and phrasing (Levenkov 2007, 125).
+
+### Center Floor Exercises
+
+Center Floor Exercises in Balanchine’s school consisted of combinations which were not long and complicated, but short, simple, and usually containing changes in épaulement. He rather had the dancers concentrated on how the movement should look like than remembering the combinations of phrases. Exercises often ended with highly raised supporting leg forward, aside, back, presented beautifully, with elongated line. Also he liked to set such combinations which joined slow demi-plié on a supporting leg, because he wanted to develop dancer’s force necessary for slow relevés and for control of a landing after jumps. The choreographer was not interested in long-term balance in poses, because he did not want to see unsteady jumping up on fingers or semi-fingers.
+
+Balanchine set these exercises to help dancers to execute elegantly and clearly an action of a raising of a foot from a floor, of a lifting the knee high and, aside developing a foot, to show beautifully elongated line. He taught performers to lift their feet highly, with their full turnout and with well extended foot during execution of the movement in various directions. The dancers spot the front instead of the corner with fully extended feet. Balanchine reminded that the audience sees a moving leg, therefore the supporting leg can be developed slightly less.
+
+### Pointe technique
+
+The pointe dance was of great importance to Balanchine. By his own admission, he fell in love with ballet when he, as a little boy, saw on the stage of the Mariinsky Theater a ballerina dancing on her fingers. It was nice to see the dancers with beautiful legs in pointe shoes. Remembering the years of his study and work at the Mariinsky Theater, he said that in the Russian school the short feet were encouraged, which make dancers appear weightless. But he liked longer feet, which enhanced the look of the foot on pointe and elongate legs and make movement effective.
+
+Throughout his creative activities Balanchine has perfected the movement of the feet and pointe work. Suki Schorer confirmed this by saying: "More than any other figure in the twentieth century ballet, George Balanchine concentrated on the development and use of pointe work." (Levenkov 2007, 226)
+
+Like no other choreographers of the twentieth century, Balanchine developed and used the pointe technique. Throughout his creative life Balanchine sought to intimate knowledge of en pointe. He demanded the same from his dancers.
+
+He discovered the laws of pointe technique at the Imperial Theatre School and at the Mariinsky Theater. In his American school Balanchine focused on creating fundamentally new pointe technique. His original approach consists in the consecutive 'roll-up' (rise) or 'roll-down' (descent) from pointes. Jump on fingers Balanchine rejected categorically. Consecutive relevé allowed to reach the technique of en pointe of the highest level. When performing this movement the dancer needs to feel the floor and do push-ups from it. The dancer, smoothly releasing heels, rises on pointes, consistently involving all foot in lifting up, as if rolls the movement through her ligament.
+
+Balanchine set repeated relevés at a barre. It was made on two legs and on one at slow rising. Sometimes it stopped on relevé from semi-fingers on fingers on two legs in the first position. Rising upward was slow, while Balanchine carefully watched. The aim was to strengthen ligaments of fingers. Each movement was repeated eight times, on the first position, on one foot, keeping another behind in coupé (at the Russian school – cou-de pied). All attention was concentrated on a supporting leg. When lowering from fingers it was required to give a heel forward. This exercise wasn't an entertainment, it didn't resemble dance. Exhausting and boring, it allowed to get force and self-checking, provided freedom and ease of movements for the real dance.
+
+In pointe work feet must be fully pointed and stretched for battement tendu or dégagé. Balanchine said that substantial efforts are still needed for it. Sock should not stay straight, so that the dancer should bend it, overcoming resistance of rigid insoles. Balanchine did not like so-called "birdie" foot. In all positions he wanted to see the fully elongated foot and leg carefully tighten. (Balanchine often spoke about how that terms are not always accurate, for example, to say "stretch a sock" isn’t quite right, it is better to say: "curve it." He doubted the correctness of comments: "Stretch knees!". Upon Balanchine, it is better to say “straighten and tighten the leg.”)
+
+The following positions in pointe work are the following:
+1. The first position on fingers in a class appeared very often. With its help force of feet and fingers was developed, work of knees and ankles was improved. Pulling on came from the first position without shift of a sock of a foot therefore the position on fingers was wider than it was accepted. The position which Balanchine designated "the little one" in which heels almost adjoin was most often applied. In this position were executed pas de bourré or pas couru position.
+2. The greatest interest for Balanchine was represented by the second position on fingers which is usually executed in échappé. The choreographer drilled dancers that execution of this position was extremely exact. At rise on fingers from the second position the distance between feet turns out wider than it is accepted in hopping relevé, when the dancer shifts pointes "under herself". In Balanchine's échappé in the second position en pointe the distance between heels approximately equaled 2,5 feet. Lowering from fingers happened in a normal second position.
+3. In the fourth (IV) position feet are separated on the length of the foot and even broader. Both feet should stand along the central axis of the dancer's body, as if she was walking on a rope. It is impossible to do "roll-up' to the top from the IV position, therefore only the foot standing behind was squeezed out, and the foot which ahead is standing moved forward along the lines of a "rope". Rising from the V position into the IV position en pointe must be in line with body's center line. According to Balanchine, in the IV position pointes are precisely leveled along the central axis of a body and turnout. The most important – both feet have to participate in work. Balanchine watched that feet moved clearly, at the same distance from each other, fell at the same time, maintaining turnout.
+4. The fifth position demands a small jump and alignment ahead of the supporting foot. Balanchine seldom set the squeezed-out relevés in the V position demanding carrying out ahead of the supporting foot in line. Instead he preferred sus-sous. This term meant rise on pointes in the fifth position, as well as a position itself. The jumping movement began with demi-plié in the fifth position on the whole foot. Balanchine demanded that both feet took part in this movement. At a jump fingers at the same time move along the center line, legs unfold from the hips to the side. In this situation only one pointe in front has to be visible. There are several ways of lowering pointes from sus-sous. The dancer can fall on the foot standing behind in plié; or take it ahead standing in the fifth position so that it closes behind the standing foot in plié. It is possible to take both feet at the same time, falling precisely in the fifth position in plié very quickly and smoothly. Each way is used without plié, then the dancer fall on foot precisely in the fifth position on the extended leg.
+
+For Balanchine, each movement must be presented to the viewer in the best of its capacity. The master demanded the dancers to be the precise instruments of the choreographer, whose ideas and designs came from the music itself. As a result is his neoclassical style stripped to its essentials: motion, movement and music. (About neoclassicism see Judith Mackrell and Debra Craine, Oxford dictionary of Dance 2004, 6.)
+
+__________________
+
+## Conclusion
+
+The article offered the reader only some elements of classical dance lesson of George Balanchine, who in separating himself from the classical Imperial Ballet and the Soviet Vaganova ballet founded his signature style, his original vocabulary with specific «pronunciation» of the elements which comprise it. With his work Balanchine forever changed classical ballet with his elongated, off-balanced positions, innovative pointe work, and other features, and created a new ballet style known under the name of "neoclassicism". With his original and unique approach Balanchine dragged ballet out of the 19th century and launched it into the 20th century,  became the father of American Ballet School and the founder of the New York City Ballet, and made himself the most influential figure of ​the dance world.
+
+__________________
+
+## References 
+
+<div className='references'>
+
+1. Kirstein, L. 1998. _The classical ballet_. University press of Florida.
+2. Levenkov,  O. G. 2007. _Balanchine_. Perm.
+3. Schorer, Suki.  1999. _On Balanchine technique_. Florida: University Press.
+4. ____. 2000. "O pal'cevoj tehnike Balanchina" ("On Balanchine's pointe work technique"), translation Ju.Ju. Jakovlevoj. _Vestnike Akademii Russkogo baleta imeni A.Ja. Vaganovoj no.8_ (_Bulletin of the Vaganova Academy of Russian Ballet, no. 8_)
+5. Silkin, Peter. 2013. "Dzhordzh Balanchin – uchitel' (1904-1983)" ("Georg Balanchine-The Teacher (1904-1983)"). _Vestnik Baltijskogo federal'nogo universiteta im. I. Kanta, no. 5:106-115._ (_Bulletin of the Baltic Federal University Immanuel Kant, No.5_). 
+6. ____. 2014. "Nekotorye bazovye dvizhenija klassicheskogo jekzersisa v interpretacii Balanchina," ("Some basic movements of classical exercise in the interpretation of Balanchine"). Vestnike Akademii Russkogo baleta imeni A.Ja. Vaganovo, 3(32): 69-72. (_Bulletin of the Vaganova Academy of Russian Ballet, 3(32)_).
+7. ____. 2015. “Pedagogical heritage of A. Vaganova: classical dance lessons.” _Bulletin of the Vaganova Academy of Russian Ballet 1(36): 75-78_.
+8. Souritz, E. 2004. _. Ekaterinburg: Ural University Publishing House.
+9. Walczak Barbara and Una Kai. 2008. _. University press of Florida.
+
+</div>
+
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
+</div>
+
+</div>
