--- a/issue1/article07/2016-02-18.mdx
+++ b/issue1/article07/2016-02-18.mdx
@@ -171,8 +171,8 @@ __________________
 5. Silkin, Peter. 2013. "Dzhordzh Balanchin – uchitel' (1904-1983)" ("Georg Balanchine-The Teacher (1904-1983)"). _Vestnik Baltijskogo federal'nogo universiteta im. I. Kanta, no. 5:106-115._ (_Bulletin of the Baltic Federal University Immanuel Kant, No.5_). 
 6. ____. 2014. "Nekotorye bazovye dvizhenija klassicheskogo jekzersisa v interpretacii Balanchina," ("Some basic movements of classical exercise in the interpretation of Balanchine"). Vestnike Akademii Russkogo baleta imeni A.Ja. Vaganovo, 3(32): 69-72. (_Bulletin of the Vaganova Academy of Russian Ballet, 3(32)_).
 7. ____. 2015. “Pedagogical heritage of A. Vaganova: classical dance lessons.” _Bulletin of the Vaganova Academy of Russian Ballet 1(36): 75-78_.
-8. Souritz, E. 2004. _. Ekaterinburg: Ural University Publishing House.
-9. Walczak Barbara and Una Kai. 2008. _. University press of Florida.
+8. Souritz, E. 2004. _Ballet and dance in America_. Ekaterinburg: Ural University Publishing House.
+9. Walczak Barbara and Una Kai. 2008. _Balanchine the Teacher_. University press of Florida.
 
 </div>
 
